fix: finally fix scrollbar (i hope)

--- a/src/routes/layout.css
+++ b/src/routes/layout.css
@@ -1,21 +1,3 @@
-@import 'tailwindcss';
-
-@font-face {
-  font-family: 'Bebas Neue';
-  src: url('/fonts/BebasNeue.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Trade Gothic LT Std';
-  src: url('/fonts/TradeGothicLTStd.woff2') format('woff2');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
 :root {
   --color-primary: rgba(11, 10, 9, 1);
   --color-secondary: rgba(223, 225, 215, 1);
@@ -31,6 +13,12 @@ body {
   min-height: 640px;
 }
 
+@media (max-width: 768px) {
+  .workspace-wrapper { padding-inline: 16px; }
+  .footer-wrapper { padding-inline: 16px; }
+  .works-title { font-size: 3rem; }
+}
+
 .page-shell {
   display: flex;
   flex-direction: column;
@@ -42,10 +30,4 @@ body {
 
 .page-header {
   padding: 20px 23px 0 23px;
-}
-
-@media (max-width: 768px) {
-  .workspace-wrapper { padding-inline: 16px; }
-  .footer-wrapper { padding-inline: 16px; }
-  .works-title { font-size: 3rem; }
 }
